<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TakeAttendance">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary3"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/MyTheme3" />

    <Button
        android:id="@+id/mark_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:background="@color/colorPrimary3"
        android:text="@string/submit_attendance"
        android:textColor="#fff" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/attendance_list"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_above="@+id/mark_present"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="0dp" />

    <Button
        android:id="@+id/view_attendance"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="100dp"
        android:text="@string/detailed_analysis"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="46dp" />

    <Button
        android:id="@+id/update_attendance"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/view_attendance"
        android:layout_marginEnd="51dp"
        android:text="@string/update_attendance"
        android:layout_alignParentRight="true"
        android:layout_marginRight="51dp" />
</RelativeLayout>